# typed_string

./: CMakeLists.txt  README.md
include/: arena_typed_string.h  arena_typed_string_parser.h  memory_arena.h  string_util.h  typed_string_desc.h
src/: arena_typed_string.cpp  arena_typed_string_parser.cpp  string_util.cpp  typed_string_desc.cpp
test/: parse_test.cpp  test.cpp
